@@ -1,15 +1,0 @@
-Build.PL
-MANIFEST
-MANIFEST.SKIP
-README
-Makefile.PL
-META.yml
-Changes
-LICENSE
-
-lib/Dist/Zilla/Plugin/MinimumPerl.pm
-
-examples/dist.ini
-
-t/1_load.t
-t/apocalypse.t
