@@ -1,30 +1,0 @@
-# skip Eclipse IDE stuff
-\.includepath$
-\.project$
-\.settings/
-
-# Avoid version control files.
-\B\.svn\b
-\B\.git\b
-^\.gitignore$
-
-# Avoid Makemaker generated and utility files.
-\bMakefile$
-\bblib/
-\bMakeMaker-\d
-\bpm_to_blib$
-
-# Avoid Module::Build generated and utility files.
-\bBuild$
-\b_build/
-^MYMETA\.
-
-# Avoid temp and backup files.
-~$
-\.old$
-\#$
-\b\.#
-\.bak$
-
-# our tarballs
-\.tar\.gz$
