@@ -1,17 +1,0 @@
-#!/usr/bin/perl
-use strict; use warnings;
-
-my $numtests;
-BEGIN {
-	$numtests = 1;
-
-	eval "use Test::NoWarnings";
-	if ( ! $@ ) {
-		# increment by one
-		$numtests++;
-	}
-}
-
-use Test::More tests => $numtests;
-
-use_ok( 'Dist::Zilla::Plugin::MinimumPerl' );
