@@ -1,5 +1,11 @@
 Revision history for Dist::Zilla::Plugin::MinimumPerl
 
+{{$NEXT}}
+
+	Converted to Dist::Zilla for the release process!
+	Updated to support Dist::Zilla v4
+	Use MooseX::Types::Perl to validate the perl attr
+
 * 0.02
 
 	d0h, the logic for finding the minimum Perl version was reversed!
